--- a/first-project/pipa-gano-01/src/App.css
+++ b/first-project/pipa-gano-01/src/App.css
@@ -1,30 +1,21 @@
-.wreapper{
-  display: grid;
-  grid-template-areas: 
-  "header header header"
-  "nav content content"
-  ;
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 10px;
-  margin: 0 auto;
-}
 
-.wreapper:not(.wreapper__header){
-  max-width: 1000px;
+.wreapper{
+  max-width: 1200px;
+  margin: 0 auto;
 }
 body{
   background-color: #f0f0f0;
   color: #000;
-  
-
 }
 
 .wreapper__Content{
-  grid-area: content;
-  background-color: brown;
+  width: 100%;
 }
-
+.wreapper__Content--container{
+  display: flex;
+  width: 1022px;
+  margin: 0 auto;
+}
 
 
 
