--- a/first-project/pipa-gano-01/src/index.scss
+++ b/first-project/pipa-gano-01/src/index.scss
@@ -1,8 +1,13 @@
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  
 }
+*{
 
+  color: #333;
+  font-family: Roboto Mono;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
